<resources>
    <string name="text_sign_in">Masuk</string>
    <string name="text_sign_in_subtitle">Selamat datang, silahkan masuk untuk melanjutkan</string>

    <string name="app_name">ExerciseUhuy</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="tombol">Sign-In</string>

    <string name="namaitem">Nama Item</string>
    <string name="datakontak">Data Kontak</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telpon</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="lihatnomor">Lihat Nomor</string>
</resources>